--- a/index.html
+++ b/index.html
@@ -283,35 +283,32 @@
       </div>
       <div class="modal-body bg-dark">
         <p class="lead text-light text-center">fill the form</p>
-        <form>
+        <form action="https://formsubmit.co/nwadiutoprecious4950@gmail.com" method="POST">
            <div class="mb-3">
             <label for="firstname" class="col-form-label bg-dark text-light">First Name</label>
-            <input type="text" required="required" class="form-control" style="background: transparent; color:white; border: none; border-bottom: 2px solid white;">
+            <input type="text" required="required" name="name" class="form-control" style="background: transparent; color:white; border: none; border-bottom: 2px solid white;">
+           </div>
+
+           <div class="mb-3">
+            <label for="lastname" class="col-form-label bg-dark text-light">Last Name</label>
+            <input type="text" class="form-control" name="name" style="background: transparent; color:white; border: none; border-bottom: 2px solid white;" required>
+           </div>
+
+           <div class="mb-3">
+            <label for="email" class="col-form-label bg-dark text-light">Email Address</label>
+            <input type="email" name="email" class="form-control" style="background: transparent; color:white; border: none; border-bottom: 2px solid white;" required>
+           </div>
+
+           <div class="mb-3">
+            <label for="phonenumber" class="col-form-label bg-dark text-light">Mobile Number</label>
+            <input type="number" name="number" class="form-control ba" style="background: transparent; color:white; border: none; border-bottom: 2px solid white;" required>
+           </div>
+           <div class="modal-footer bg-dark">
+             <button type="button" class="btn btn-secondary bg-danger" data-bs-dismiss="modal">Close</button>
+             <input type="submit" value="Submit" class="btn btn-secondary bg-primary">
            </div>
         </form>
-        <form>
-          <div class="mb-3">
-           <label for="lastname" class="col-form-label bg-dark text-light">Last Name</label>
-           <input type="text" class="form-control" style="background: transparent; color:white; border: none; border-bottom: 2px solid white;">
-          </div>
-       </form>
-       <form>
-        <div class="mb-3">
-         <label for="email" class="col-form-label bg-dark text-light">Email Address</label>
-         <input type="text" class="form-control" style="background: transparent; color:white; border: none; border-bottom: 2px solid white;">
-        </div>
-     </form>
-     <form>
-      <div class="mb-3">
-       <label for="phonenumber" class="col-form-label bg-dark text-light">Mobile Number</label>
-       <input type="text" class="form-control ba" style="background: transparent; color:white; border: none; border-bottom: 2px solid white;">
-      </div>
-   </form>
-      </div>
-      <div class="modal-footer bg-dark">
-        <button type="button" class="btn btn-secondary bg-danger" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-md btn-primary"><a style="color: #ffffff; text-decoration: none;" class="link" href="">Submit</a></button>
-      </div>
+      
     </div>
   </div>
 </div>
