--- a/index.html
+++ b/index.html
@@ -23,14 +23,25 @@
           <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto" style="font-size: 20px; color: #f08080;">
               <a style="color: #ffffff;" class="nav-link active htt" aria-current="page" href="#Explore">Explore</a>
-              <a style="color: #ffffff;" class="nav-link active htt" href="#Frontiers">Frontiers</a>
-              <a style="color: #ffffff;" class="nav-link active htt" href="#Questions">Questions</a>
               <a style="color: #ffffff;" class="nav-link active htt" href="#Updates">Updates</a>
+              <a style="color: #ffffff;" class="nav-link active htt" href="#Questions">Questions</a>
+              <a style="color: #ffffff;" class="nav-link active htt" href="#Frontiers">Frontiers</a>
+
             </ul>
           </div>
         </div>
       </nav>
-    
+      
+
+
+<section class="time">
+  <div class="container">
+    <div class="tframe">    <!-- <script src="js/main.js"></script>  -->
+      <!-- <script src="js/main.js"></script>  -->
+      <script src="js/main.js"></script>
+    </div> 
+  </div>
+</section>    
         <!-- intro -->
 <section class="bg-dark text-light text-center p-5 pb-lg-0 text-sm-start home">
      <div class="container">
@@ -47,6 +58,7 @@
 
           </div>
      </div>
+     <!-- <script src="js/main.js"></script> -->
 </section>
 
 <!-- news form -->
